// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatMessage Credential offer renders correctly 1`] = `
<View
  accessibilityState={
    Object {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    Object {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "marginBottom": 8,
      "opacity": 1,
      "width": "100%",
    }
  }
  testID="com.ariesbifold:id/Chat.ViewOffer"
>
  <View
    style={
      Array [
        Object {
          "width": "90%",
        },
        Object {
          "alignItems": "flex-start",
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "width": "100%",
        },
        Object {
          "alignItems": "flex-start",
        },
      ]
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 18,
            "fontWeight": "normal",
          },
          Array [
            Object {
              "color": "#D3D3D3",
              "fontSize": 12,
              "marginBottom": 0,
              "marginTop": 8,
            },
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Open Sans",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "700",
              "lineHeight": 18,
              "marginLeft": "5%",
            },
          ],
        ]
      }
    >
       
       
    </Text>
  </View>
</View>
`;

exports[`ChatMessage Proof request renders correctly 1`] = `
<View
  accessibilityState={
    Object {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    Object {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "marginBottom": 8,
      "opacity": 1,
      "width": "100%",
    }
  }
  testID="com.ariesbifold:id/Chat.ViewRequest"
>
  <View
    style={
      Array [
        Object {
          "width": "90%",
        },
        Object {
          "alignItems": "flex-start",
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "width": "100%",
        },
        Object {
          "alignItems": "flex-start",
        },
      ]
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 18,
            "fontWeight": "normal",
          },
          Array [
            Object {
              "color": "#D3D3D3",
              "fontSize": 12,
              "marginBottom": 0,
              "marginTop": 8,
            },
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Open Sans",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "700",
              "lineHeight": 18,
              "marginLeft": "5%",
            },
          ],
        ]
      }
    >
       
       
    </Text>
  </View>
</View>
`;

exports[`ChatMessage Sent presentation renders correctly 1`] = `
<View
  accessibilityState={
    Object {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    Object {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "marginBottom": 8,
      "opacity": 1,
      "width": "100%",
    }
  }
  testID="com.ariesbifold:id/Chat.OpenPresentation"
>
  <View
    style={
      Array [
        Object {
          "width": "90%",
        },
        Object {
          "alignItems": "flex-start",
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "width": "100%",
        },
        Object {
          "alignItems": "flex-start",
        },
      ]
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      style={
        Array [
          Object {
            "color": "#FFFFFF",
            "fontSize": 18,
            "fontWeight": "normal",
          },
          Array [
            Object {
              "color": "#D3D3D3",
              "fontSize": 12,
              "marginBottom": 0,
              "marginTop": 8,
            },
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Open Sans",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "700",
              "lineHeight": 18,
              "marginLeft": "5%",
            },
          ],
        ]
      }
    >
       
       
    </Text>
  </View>
</View>
`;
